2011-04-29  Vsevolod Vlasov  <vsevik@chromium.org>

        Reviewed by Pavel Feldman.

        Chromium DevTools: Fix network panel timing/size/headers tests.
        https://bugs.webkit.org/show_bug.cgi?id=59696

        * src/js/Tests.js:
        (.TestSuite.prototype.testNetworkSize.finishResource):
        (.TestSuite.prototype.testNetworkSyncSize.finishResource):
        (.TestSuite.prototype.testNetworkRawHeadersText.finishResource):
        (.TestSuite.prototype.testNetworkTiming.finishResource):

2011-04-29  Pavel Feldman  <pfeldman@google.com>

        Reviewed by Yury Semikhatsky.

        Web Inspector: add "open link in new tab" action into the network and resources panels.
        https://bugs.webkit.org/show_bug.cgi?id=59788

        This change also distinguishes context menu items case between platforms.

        * src/js/DevTools.js:

2011-04-28  Nat Duca  <nduca@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium] Add swapBuffersCompleteCallback to Extensions3DChromium
        https://bugs.webkit.org/show_bug.cgi?id=59626

        * public/WebGraphicsContext3D.h:
        (WebKit::WebGraphicsContext3D::WebGraphicsSwapBuffersCompleteCallbackCHROMIUM::~WebGraphicsSwapBuffersCompleteCallbackCHROMIUM):
        (WebKit::WebGraphicsContext3D::setSwapBuffersCompleteCallbackCHROMIUM):
        * src/Extensions3DChromium.cpp:
        (WebCore::Extensions3DChromium::setSwapBuffersCompleteCallbackCHROMIUM):
        * src/GraphicsContext3DChromium.cpp:
        (WebCore::SwapBuffersCompleteCallbackAdapter::~SwapBuffersCompleteCallbackAdapter):
        (WebCore::SwapBuffersCompleteCallbackAdapter::SwapBuffersCompleteCallbackAdapter):
        (WebCore::SwapBuffersCompleteCallbackAdapter::onSwapBuffersComplete):
        (WebCore::SwapBuffersCompleteCallbackAdapter::create):
        (WebCore::GraphicsContext3DInternal::setSwapBuffersCompleteCallbackCHROMIUM):
        * src/GraphicsContext3DInternal.h:
        * src/WebViewImpl.cpp:
