@@ -35,7 +35,7 @@
 #include "WebKitClient.h"
 #include <webkit/support/webkit_support.h>
 
-#if defined(WIN32) && defined(WEBKIT_DLL_UNITTEST)
+#if defined(WEBKIT_DLL_UNITTEST)
 #include "WebUnitTests.h"
 #endif
 
@@ -49,7 +49,7 @@ int main(int argc, char** argv)
     // initializations needed by WebKit support.
     webkit_support::SetUpTestEnvironmentForUnitTests();
 
-#if defined(WIN32) && defined(WEBKIT_DLL_UNITTEST)
+#if defined(WEBKIT_DLL_UNITTEST)
     // For chromium multi-dll build, need to call webkit api to create a
     // TestSuite instance in webkit.dll and run all tests from there.
     int result = WebKit::RunAllUnitTests(argc, argv);
